[metadata]
name = jason_python_module_github
version = 2022.9.12.1
author = Jason Brudvik
author_email = jason.brudvik@maxiv.lu.se
description = Testing Python Module Installation
keywords = fun
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/jasonbrudvik/jason_python_module_github
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy

[options.entry_points]
console_scripts =
    jason_python_module_github = jason_python_module_github.__main__:main
